2008-11-06  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php: Added blank space. Incident_details_list 
	now reports human time not mysql timestamp.

	* include/functions_calendar.php: With invalid dates (0000-00-00) 
	render to never.

	* include/functions_db.php: mail_incident() now also includes
	group name in incident information.

	* operation/incidents/incident.php: Header resolution and started
	has now a <br>.

	* operation/projects/project.php: Funny SQL/Logic bug fixed :-) 

	* operation/inventories/manage_prod.php: Missing " char.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* operation/users/user_search.php: Implemented user search by string,
	it was missing in the code but appears in the interface.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident_detail.php: Added jQuery datepicker
	files when the page is loaded without AJAX. It was causing a failure
	when searching parent incident.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* include/functions_form.php: Removed wordwrap on show_workunit_data()
	since it was not showing properly in some cases.

2008-11-06  Esteban Sanchez  <estebans@artica.es>

	* include/js/integria_incident_search.js: Inventory search dialog is a
	bit wider now. Added a check on inventory search to don't show
	active incidents. It also shows more elements in a dialog.

	* operation/inventories/inventory_search.php: It doesn't show active
	incidents of an inventory object if the form is in a dialog.

	* install.php: Removed login class on text inputs.

2008-11-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation

	* include/languages/index.pot: Updated po template.

2008-11-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* operation/user_report/report_annual.php: fixed bug, a variable
	  that didn't exit.

2008-11-05  Jorge Gonzalez  <jorgegonz@artica.es>
