@@ -231,7 +231,7 @@ if ((isset($_GET["create"]) OR (isset($_GET["update"])))) {
 			echo "<td>";
 			echo "<img src='images/disk.png'>&nbsp;";
 			$attach_id = $row["id_attachment"];
-			$filelink= $config["homedir"]."attachment/".$row["id_attachment"]."_".$row["filename"];
+			$filelink= $config["homedir"]."attachment/".$row["id_attachment"]."_".rawurlencode ($row["filename"]);
 			echo "<a href='$filelink'>";
 			echo $row["filename"];
 			echo "</A>";
